[gd_scene load_steps=8 format=2]

[ext_resource path="res://modified_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://light.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "e_power"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("frame0:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 7 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
	vec4 clr = texture(TEXTURE, UV);
	clr.a = 1.0 - clr.a;
	COLOR = clr;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="frame0" type="Label" parent="."]
modulate = Color( 0, 1, 1, 1 )
margin_left = -35.7041
margin_top = -31.9719
margin_right = 36.2959
margin_bottom = 34.0281
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "##
# #
##"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animationPlayer" type="AnimationPlayer" parent="."]
anims/e_power = SubResource( 1 )

[node name="collisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="label" type="Label" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_left = -10.0
margin_top = -9.0
margin_right = 9.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 1 )
text = "@"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="light" type="Light2D" parent="."]
visible = false
material = SubResource( 4 )
texture = ExtResource( 3 )
texture_scale = 0.05

[node name="canvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0, 0, 0, 1 )
